Add ElliottSwingIndicator and related classes for enhanced Elliott wave analysis